products are added here

--- a/products.html
+++ b/products.html
@@ -6,17 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    testing is here------------------!!!!
-
-    added second line
-
-
-
-    added thrid line
-
-
-    added 4 line
-
-    
+    the product will come here
 </body>
 </html>
